--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask==1.1.2
 Flask-Compress==1.9.0
 future==0.18.2
 gunicorn==20.0.4
+heroku==0.1.4
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -22,6 +23,7 @@ plotly-heatmap==0.1
 python-dateutil==2.8.1
 pytz==2021.1
 PyYAML==5.4.1
+requests==2.25.1
 retrying==1.3.3
 six==1.15.0
 urllib3==1.26.3
